Actualización del juego educativo con manejo de nivel y feedback

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <button onclick="viewProgress()">
             <img src="src/progreso.png" alt="Progreso" class="icon"> Ver Progreso
         </button>
+        <button class="exit-button" onclick="showExitPrompt()">
+            <img src="src/salir.png" alt="Salir" class="icon"> Salir
+        </button>
     </div>
 
     <div id="level-screen" class="container" style="display: none;">
@@ -23,7 +26,7 @@
             <img src="src/nivel.png" alt="Nivel 1" class="icon"> Nivel 1
         </button>
         <button onclick="startLevel(2)">
-            <img src="src/nivel.png"" alt="Nivel 2" class="icon"> Nivel 2
+            <img src="src/nivel.png" alt="Nivel 2" class="icon"> Nivel 2
         </button>
         <button onclick="startLevel(3)">
             <img src="src/nivel.png" alt="Nivel 3" class="icon"> Nivel 3
